[Silver IV] Title: 덱, Time: 200 ms, Memory: 20356 KB -BaekjoonHub