@@ -4,63 +4,61 @@ public class Main{
     public static void main(String[] args) throws IOException{
         BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
         int n = Integer.parseInt(br.readLine());
-        List<Integer> list = new ArrayList<>();
+        Deque<Integer> deque = new ArrayDeque<>();
         StringBuilder sb = new StringBuilder();
         for(int i=0;i<n;i++){
             String s = br.readLine();
             String[] ss = s.split(" ");
             String com = ss[0];
-            
+
             if(com.equals("push_front")){
-                list.add(0,Integer.parseInt(ss[1]));
+               deque.addFirst(Integer.parseInt(ss[1]));
             }
             if(com.equals("push_back")){
-                list.add(Integer.parseInt(ss[1]));
+                deque.addLast(Integer.parseInt(ss[1]));
             }
             if(com.equals("pop_front")){
-                if(list.size()==0){
-                   sb.append(-1 + "\n"); 
+                if(deque.isEmpty()){
+                    sb.append(-1 + "\n");
                 }else{
-                    sb.append(list.get(0) + "\n");
-                    list.remove(0);
+                    sb.append(deque.pollFirst() + "\n");
                 }
-               
+
             }
             if(com.equals("pop_back")){
-                if(list.size()==0){
-                  sb.append(-1 + "\n");
+                if(deque.isEmpty()){
+                    sb.append(-1 + "\n");
                 }else{
-                  sb.append(list.get(list.size()-1) +"\n");
-                  list.remove(list.size()-1);  
+                    sb.append(deque.pollLast() + "\n");
                 }
-                
+
             }
             if(com.equals("size")){
-                 sb.append(list.size()+"\n");
+                sb.append(deque.size()+"\n");
             }
             if(com.equals("empty")){
-                if(list.size()==0){
+                if(deque.isEmpty()){
                     sb.append(1 + "\n");
                 }else{
                     sb.append(0 + "\n");
                 }
             }
             if(com.equals("front")){
-                if(list.size()==0){
-                  sb.append(-1 + "\n");
+                if(deque.isEmpty()){
+                    sb.append(-1 + "\n");
                 }else{
-                  sb.append(list.get(0)+"\n"); 
+                    sb.append(deque.getFirst()+"\n");
                 }
             }
             if(com.equals("back")){
-                if(list.size()==0){
-                  sb.append(-1 + "\n");
+                if(deque.isEmpty()){
+                    sb.append(-1 + "\n");
                 }else{
-                  sb.append(list.get(list.size()-1)+"\n");
+                    sb.append(deque.getLast()+"\n");
                 }
             }
         }
         System.out.println(sb);
-        
+
     }
 }
